2012-10-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/chconf.h (CORTEX_VTOR_INIT): Define.

	* src/neug.ld.in (.sys): Follow the change of file layout.

	* src/halconf.h (HAL_USE_EXT, HAL_USE_RTC): Define.
	(ADC_USE_WAIT, ADC_USE_MUTUAL_EXCLUSION, SERIAL_BUFFERS_SIZE):
	Remove.

	* boards/FST_01/mcuconf.h (STM32_RTCSEL): Define.
	(STM32_USBPRE, STM32_MCO): Remove.
	* boards/STBEE/mcuconf.h: Likewise.
	* boards/STM8S_DISCOVERY/mcuconf.h: Likewise.
	* boards/OLIMEX_STM32_H103/mcuconf.h: Likewise.
	* boards/STBEE_MINI/mcuconf.h: Likewise.
	* boards/CQ_STARM/mcuconf.h: Likewise.
	* boards/STM32_PRIMER2/mcuconf.h: Likewise.

	* boards/common/mcuconf-common.h (STM32_NO_INIT)
	(STM32_HSI_ENABLED, STM32_LSI_ENABLED, STM32_HSE_ENABLED)
	(STM32_LSE_ENABLED, STM32_USB_CLOCK_REQUIRED, STM32_USBPRE)
	(STM32_MCOSEL, STM32_PVD_ENABLE, STM32_PLS): Define.

	* chibios: Updated to 2.4.3.

	* src/usb_stm32f103.c: Rename (was: usb-lld.c).
	* src/Makefile.in (CSRC): Follow the rename.

2012-10-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (rng_gen): Remove.
	(rng): Merge rng_gen, avoiding bigger lock.
	(neug_mode_select): Better synchronization to rng thread.

2012-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.03.

	* src/main.c (vcom_string3): Updated.

2012-10-05  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (neug_state): Remove.
	(neug_ctrl_write_finish, vcom_port_data_setup, EP1_IN_Callback)
	(main): Use ->p_state (was: neug_state).
	(main): Call chThdSleep (was: chEvtWaitOneTimeout).

2012-10-03  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (USB_NEUG_GET_INFO): New.

	* tool/neug_check.py: Show mode and errors.

	* src/adc_stm32f103.c (adc_lld_serve_rx_interrupt)
	(adc_start_conversion): Filter by CRC32.
	* src/random.c (ep_init, ep_fill_wbuf, ep_process): Filter by CRC32.
	(neug_init): CRC32 initialization.

2012-10-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c: Use our own ADC driver.

	* src/halconf.h (HAL_USE_ADC): Set FALSE.